[project]
name = "eldengym"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "grpcio>=1.75.1",
    "grpcio-tools>=1.75.1",
    "gymnasium>=1.2.1",
    "ipykernel>=6.30.1",
    "numpy>=2.2.6",
    "opencv-python>=4.11.0.86",
]
